# comine

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: build.yml  release.yml
scripts/: bump-version.js  generate-i18n-keys.js  generate-icon-paths.cjs
src/: app.d.ts  app.html
src-tauri/: .tauri-private.key.pub  Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/src/: cache.rs  deps.rs  lib.rs  logs.rs  main.rs  notifications.rs  proxy.rs  relay.rs  server.rs  tray.rs  types.rs  utils.rs
src-tauri/src/backends/: lux.rs  mod.rs  ytdlp.rs
src/lib/actions/: portal.ts  spotlight.ts  tooltip.ts
src/lib/components/: AccentProvider.svelte  BackgroundProvider.svelte  Button.svelte  ChannelBuilder.svelte  Checkbox.svelte  Chip.svelte  CollapsibleBlock.svelte  Divider.svelte  ExtensionIntegrationSettings.svelte  FormatModal.svelte  Icon.svelte  Input.svelte  LanguageSwitcher.svelte  MediaGrid.svelte  Modal.svelte  NavItem.svelte  NotificationPopup.svelte  Onboarding.svelte  OptionModal.svelte  PlaylistBuilder.svelte  PlaylistModal.svelte  ScrollArea.svelte  Select.svelte  SettingButton.svelte  SettingItem.svelte  SettingsBlock.svelte  SetupBanner.svelte  ThumbnailGlow.svelte  Toast.svelte  Toggle.svelte  TrackBuilder.svelte  ViewStack.svelte  VirtualList.svelte  iconPaths.ts
src/lib/i18n/: index.ts  keys.ts
src/lib/i18n/locales/: en.json  ru.json
src/lib/stores/: deps.ts  history.ts  logs.ts  mediaCache.ts  navigation.ts  queue.ts  scroll.ts  serverSync.ts  settings.ts  stats.ts  updates.ts  viewState.ts
src/lib/utils/: android.ts  backend-detection.test.ts  backend-detection.ts  color.ts  error-codes.ts  errors.ts  format.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/components/: +page.svelte
src/routes/downloads/: +page.svelte
src/routes/history/: +page.svelte
src/routes/info/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/notification/: +layout.ts  +layout@.svelte  +page@.svelte
src/routes/settings/: +page.svelte
