[package]
name = "comine"
version = "1.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "process"] }
futures-util = "0.3.31"
zip = "2.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
urlencoding = "2"
log = "0.4.29"
lazy_static = "1.5"
chrono = "0.4"
url = "2"
image = "0.25"
base64 = "0.22"
lru = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

