[package]
name = "comine"
version = "1.1.0-1"
description = "Crossplatform media and file downloader"
authors = ["nichind"]
license = "GPL-3.0-only"
edition = "2021"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[lib]
# See https://github.com/rust-lang/cargo/issues/8519
name = "comine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "process"] }
futures-util = "0.3.31"
zip = "2.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
urlencoding = "2"
log = "0.4.29"
lazy_static = "1.5"
chrono = "0.4"
url = "2"
image = "0.25"
lru = "0.12"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

