[package]
name = "comine"
version = "1.1.0-8"
description = "Crossplatform media and file downloader"
authors = ["nichind"]
license = "GPL-3.0-only"
edition = "2021"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[lib]
# See https://github.com/rust-lang/cargo/issues/8519
name = "comine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-utils = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "process", "sync", "time"] }
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
zip = "2.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
urlencoding = "2"
log = "0.4.29"
lazy_static = "1.5"
chrono = "0.4"
url = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
lru = "0.12"
async-trait = "0.1"
sysinfo = { version = "0.33", default-features = false, features = ["disk"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
hostname = "0.4"
tiny_http = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = "1.1"
tar = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

